SourcePathResolver.getAbsolutePath
Summary:
Return `AbsPath` from `SourcePathResolver.getAbsolutePath`.

Paths were absolute before, this diff makes this assertion with types.

The rest of the diff is mechanical.

Reviewed By: bobyangyf

shipit-source-id: 6ac28acde282088d9ed0a1a0e988e6e87740538a